# power-merge

./: README.md  angular.json  package-lock.json  package.json  tsconfig.json
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: folder_ops.rs  mod.rs
src-tauri/src/models/: file.rs  mod.rs
src-tauri/src/utils/: file_utils.rs  http_util.rs  mod.rs
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  ui-shared.module.ts
src/app/models/: File.ts  all-languages.ts  params.ts  translate-targets.ts  trnaslation.models.ts
src/app/pages/compare/: compare.module.ts  compare.routes.ts
src/app/pages/compare/compare-home/: compare-home.component.css  compare-home.component.html  compare-home.component.ts
src/app/pages/merge/: merge.module.ts  merge.routes.ts
src/app/pages/merge/merge-home/: merge-home.component.css  merge-home.component.html  merge-home.component.spec.ts  merge-home.component.ts
src/app/pages/merge/open-editor/: open-editor.component.css  open-editor.component.html  open-editor.component.ts
src/app/pages/settings/: settings.module.ts  settings.routes.ts
src/app/pages/translation/: translation.module.ts  translation.routes.ts
src/app/service/: compare-manager.service.spec.ts  compare-manager.service.ts  languages.ts  merge-manager.service.spec.ts  merge-manager.service.ts  open-file-manager.service.spec.ts  open-file-manager.service.ts  translation.service.ts
(+15 files in other folders)
